# TwitchTodoBot

./: Cargo.toml  README.md  README_de.md  channels.csv  credentials.json  mods.json  todos.json
.github/workflows/: rust.yml
src/: bot.rs  channel_joiner.rs  client_sender.rs  communication.rs  config.rs  file_names.rs  handle_commands.rs  help_reply  index.html  index_de.html  index_en.html  main.rs  todos.html  web.rs
src/bot/: handle_commands.rs
src/lang/: de.rs  en.rs  help_reply_en  mod.rs
