[package]
name = "twitch_todo_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
axum = "0.7.7"
futures = "0.3.31"
log = "0.4.22"
log4rs = "1.3.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors"] }
twitch-irc = "5.0.1"
