[package]
name = "twitch_todo_bot"
version = "0.2.1"
edition = "2021"

[dependencies]
anyhow = "1.0.*"
axum = "0.7.7"
futures = "0.3.31"
log = "0.4.22"
log4rs = "1.3.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
tokio = { version = "1.41.*", features = ["full"] }
tokio-stream = "0.1.16"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors"] }
twitch-irc = "5.0.*"

[features]
default = []
de = []
en = []
